--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>About Me</title>
+  <title>About - SMR Hotel</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -47,10 +47,11 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a class="active" href="about.html">About</a></li>
+          <li><a href="index.html">Reserveringen</a></li>
           <li><a href="klanten.html">Klanten</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="insertklant.html">Klant Toevoegen</a></li>
+          <li><a href="insertreservering.html">Boek Reservering</a></li>
+          <li><a class="active" href="about.html">About</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -68,7 +69,6 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>
-          <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
