--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,148 +1,191 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <title>Hotel Api</title>
 
-    <style>
-        table, th, td {
-            border: 1px solid black;
-            border-collapse: collapse;
-            padding: 5px;
-        }
-    </style>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>Reserveringen - SMR Hotel</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
+
+  <!-- =======================================================
+  * Template Name: MeFamily - v4.10.0
+  * Template URL: https://bootstrapmade.com/family-multipurpose-html-bootstrap-template-free/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
+  <style>
+    table, th, td {
+      border: 1px solid black;
+      border-collapse: collapse;
+      padding: 5px;
+    }
+    table {
+      margin: 0 auto;
+    }
+    table {
+      margin-bottom: 20px; /* Add 20 pixels of margin to the bottom of the table */
+    }
+  </style>
 </head>
+
 <body>
-<h1>Hotel Api</h1>
 
-<h2>Table Locatie</h2>
-<table id="myTable">
-    <thead>
-    <tr>
+  <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top">
+    <div class="container d-flex align-items-center justify-content-between">
+
+      <h1 class="logo"><a href="index.html">SMR Hotel</a></h1>
+      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="active" href="index.html">Reserveringen</a></li>
+          <li><a href="klanten.html">Klanten</a></li>
+          <li><a href="insertklant.html">Klant Toevoegen</a></li>
+          <li><a href="insertreservering.html">Boek Reservering</a></li>
+          <li><a href="about.html">About</a></li>
+          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="#">Drop Down 1</a></li>
+              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
+                <ul>
+                  <li><a href="#">Deep Drop Down 1</a></li>
+                  <li><a href="#">Deep Drop Down 2</a></li>
+                  <li><a href="#">Deep Drop Down 3</a></li>
+                  <li><a href="#">Deep Drop Down 4</a></li>
+                  <li><a href="#">Deep Drop Down 5</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Drop Down 2</a></li>
+              <li><a href="#">Drop Down 3</a></li>
+              <li><a href="#">Drop Down 4</a></li>
+            </ul>
+          </li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+
+    </div>
+  </header><!-- End Header -->
+
+  <main id="main">
+
+    <!-- ======= Breadcrumbs ======= -->
+    <section id="breadcrumbs" class="breadcrumbs">
+      <div class="container">
+
+        <div class="d-flex justify-content-between align-items-center">
+          <h2>Reserveringen</h2>
+          <ol>
+            <li><a href="index.html">Reserveringen</a></li>
+            <li>Reserveringen</li>
+          </ol>
+        </div>
+
+      </div>
+    </section><!-- End Breadcrumbs -->
+
+
+    <!-- ======= Event List Section ======= -->
+    <!-- <section id="event-list" class="event-list"> -->
+      <div id="myElement">
+    <h2>Reserveringen SMR Hotel&nbsp;</h2>
+    <table id="reserveringTable">
+      <thead>
+      <tr>
         <th>ID</th>
-        <th>Locatie</th>
-        <th>Distrikt</th>
-    </tr>
-    </thead>
-    <tbody id="table-body">
-    </tbody>
-</table>
+        <th>ReserveerDatum</th>
+        <th>ReserveringsNummer</th>
+        <th>LocatieID</th>
+        <th>KlantID</th>
+<!--        <th>Familienaam</th>-->
+<!--        <th>Voornaam</th>-->
+<!--        <th>Locatienaam</th>-->
+      </tr>
+      </thead>
+      <tbody id="tableReservering-body">
+      </tbody>
+    </table>
 
-<button type= "button" onclick="getLocatie()">Get Locatie </button>
-<script src="index.js" async></script>
-
-
-
-
-<div id="data"></div>
-
-<form id="form">
-    <label for="locatie">Locatie:</label>
-    <input type="text" id="locatie" name="locatie" required>
-    <label for="distrikt">Distrikt:</label>
-    <input type="text" id="distrikt" name="distrikt" required>
-    <button type="submit" id="submit-button">submit</button>
-</form>
-<script>
-    /*var tableBody = document.getElementById("table-body");
-
-    fetch("http://localhost:8080/HotelReserveringen2023v4_war/api/locatie/list")
-        .then(response => response.json())
-        .then(data => {
-            for (var i = 0; i < data.length; i++) {
-                var row = tableBody.insertRow(-1);
-                var idCell = row.insertCell(0);
-                var locatieCell = row.insertCell(1);
-                var distriktCell = row.insertCell(2);
-                idCell.innerHTML = data[i].locatie_id;
-                locatieCell.innerHTML = data[i].locatienaam;
-                distriktCell.innerHTML = data[i].distrikt;
-            }
-        })
-        .catch(error => console.error(error));*/
-
-        document.addEventListener("DOMContentLoaded", function(event) {
-        fetch('http://localhost:8081/HotelReserveringen2023v4_war/api/locatie/list')
-            .then(response => response.json())
-            .then(data => {
-                displayTable(data);
-            })
-            .catch(error => console.error(error));
-    });
+    <script>
+      document.addEventListener("DOMContentLoaded", function(event) {
+        fetch('http://localhost:8081/HotelReserveringen2023v4_war/api/reservering/list')
+                .then(response => response.json())
+                .then(data1 => {
+                  displayReserveringnTable(data1);
+                })
+                .catch(error => console.error(error));
+      });
+    </script>
+    <script src="index.js" async></script>
+      </div>
 
 
 
 
+    <!--</section> --> <!-- End Event List Section -->
 
+  </main><!-- End #main -->
 
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
+    <div class="container">
+      <h3>SMR Hotel</h3>
+      <p>Comfortable in everyway!</p>
+      <div class="social-links">
+        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      </div>
+      <div class="copyright">
+        &copy; Copyright 2023 <strong><span>SMR Hotel</span></strong>. All Rights Reserved
+      </div>
+      <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/family-multipurpose-html-bootstrap-template-free/ -->
+        Designed by <a href="https://www.facebook.com/Heelmatt">Matthew Sahit</a>
+      </div>
+    </div>
+  </footer><!-- End Footer -->
 
-// Create data
-    form.addEventListener('submit', event => {
-        event.preventDefault();
-        const locatienaam = locatieInput.value;
-        const distrikt = distriktInput.value;
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-        fetch('http://localhost:8080/HotelReserveringen2023v4_war/api/locatie/add', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({ locatienaam, distrikt })
-        })
-            .then(response => response.json())
-            .then(data => {
-                // Use the data here
-                dataElement.innerHTML = JSON.stringify(data);
-                locatieInput.value = '';
-                distriktInput.value = '';
-            })
-            .catch(error => {
-                // Handle errors here
-                console.error(error);
-            });
-    });
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
 
-    // Update data
-    submitButton.addEventListener('click', () => {
-        const locatie = locatieInput.value;
-        const distrikt = distriktInput.value;
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
 
-        fetch('http://localhost:8080/HotelReserveringen2023v4_war/api/locatie/getLocatie', {
-            method: 'PUT',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({ locatie, distrikt })
-        })
-            .then(response => response.json())
-            .then(data => {
-                // Use the data here
-                dataElement.innerHTML = JSON.stringify(data);
-                locatieInput.value = '';
-                distriktInput.value = '';
-            })
-            .catch(error => {
-                // Handle errors here
-                console.error(error);
-            });
-    });
-
-    // Delete data
-    submitButton.addEventListener('click', () => {
-        fetch('http://localhost:8080/HotelReserveringen2023v4_war/api/locatie/remove', {
-            method: 'DELETE'
-        })
-            .then(response => response.json())
-            .then(data => {
-                // Use the data here
-                dataElement.innerHTML = JSON.stringify(data);
-            })
-            .catch(error => {
-                // Handle errors here
-                console.error(error);
-            });
-    });
-</script>
 </body>
+
 </html>
-
-
