--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -50,7 +50,7 @@
           <li><a href="index.html">Reserveringen</a></li>
           <li><a href="klanten.html">Klanten</a></li>
           <li><a href="insertklant.html">Klant Toevoegen</a></li>
-          <li><a href="insertreservering.html">Boek Reservering</a></li>
+          <li><a href="insertlocatie.html">Locatie Toevoegen</a></li>
           <li><a class="active" href="about.html">About</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -191,7 +191,8 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/Pasfoto%20Matthew%20Sahit.jpg" class="img-fluid" alt="">
+                <img src="assets/img/Pasfoto%20Matthew%20Sahit.jpg" width="350"
+                     height="500" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -202,7 +203,7 @@
               <div class="member-info">
                 <h4>Matthew Sahit</h4>
                 <span>CEO</span>
-                <p>Sint qui cupiditate. Asperiores fugit impedit aspernatur et mollitia. Molestiae qui placeat labore assumenda id qui nesciunt quo reprehenderit. Rem dolores similique quis soluta culpa enim quia ratione ea.</p>
+                <p>Matthew heeft de algemene leiding over het hotelketen. Hij zorgt ervoor dat het bedrijf als geheel op koers blijft en stuurt waar nodig die koers bij. De CEO is de algemene vertegenwoordiger van een onderneming, en heeft als zodanig de taak om de interne en externe organisatie met elkaar te verbinden.</p>
               </div>
             </div>
           </div>
