--- a/src/main/webapp/klanten.html
+++ b/src/main/webapp/klanten.html
@@ -65,7 +65,7 @@
           <li><a href="index.html">Reserveringen</a></li>
           <li><a class="active" href="klanten.html">Klanten</a></li>
           <li><a href="insertklant.html">Klant Toevoegen</a></li>
-          <li><a href="insertreservering.html">Boek Reservering</a></li>
+          <li><a href="insertlocatie.html">Locatie Toevoegen</a></li>
           <li><a href="about.html">About</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
